logs/hotline.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hotline'...
Compiling './lib/python3.5/site-packages/hotline/app.py'...
***   File "./lib/python3.5/site-packages/hotline/app.py", line 34
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hotline/contexts'...
Compiling './lib/python3.5/site-packages/hotline/contexts/bare.py'...
***   File "./lib/python3.5/site-packages/hotline/contexts/bare.py", line 22
    exec code in main
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/hotline/contexts/maya.py'...
***   File "./lib/python3.5/site-packages/hotline/contexts/maya.py", line 114
    exec code in main
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/hotline/contexts/win.py'...
***   File "./lib/python3.5/site-packages/hotline/contexts/win.py", line 46
    print new_process(*cmd)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hotline/styles'...
Listing './lib/python3.5/site-packages/hotline/tests'...
Listing './lib/python3.5/site-packages/hotline-0.6.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
